@@ -34,16 +34,15 @@
 package require tcltest 2.2
 namespace import -force ::tcltest::*
 
-
+tcltest::testConstraint notDarwin [expr {$::tcl_platform(os) != "Darwin"}]
 
 test ns_hostbyaddr-1.1 {good address} -body {
     ns_hostbyaddr 127.0.0.1
 } -match glob -result localhost*
 
-test ns_hostbyaddr-1.2 {bad address} -body {
+test ns_hostbyaddr-1.2 {bad address} -constraints {notDarwin} -body {
     ns_hostbyaddr 0.0.0.0
 } -returnCodes error -result {could not lookup 0.0.0.0}
-
 
 
 cleanupTests
